tests/characterization/snapshots/characterization__backend_versions__no_stable_versions.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: no stable versions found for tranqu.
--- end ---
