tests/characterization/snapshots/characterization__backend_versions__unknown_component.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: unknown component: bogus
--- end ---
